removed authentication from subscribe and unsubscribe backend and frontend
