# Server/Startup/openapi.json
@@ -98,16 +98,6 @@
           "Subscription"
         ],
         "operationId": "Subscription_Subscribe",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            },
-            "x-position": 1
-          }
-        ],
         "requestBody": {
           "x-name": "dto",
           "content": {
@@ -118,7 +108,7 @@
             }
           },
           "required": true,
-          "x-position": 2
+          "x-position": 1
         },
         "responses": {
           "200": {
@@ -141,16 +131,6 @@
           "Subscription"
         ],
         "operationId": "Subscription_Unsubscribe",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            },
-            "x-position": 1
-          }
-        ],
         "requestBody": {
           "x-name": "dto",
           "content": {
@@ -161,7 +141,7 @@
             }
           },
           "required": true,
-          "x-position": 2
+          "x-position": 1
         },
         "responses": {
           "200": {
@@ -716,29 +696,6 @@
             "type": "object",
             "additionalProperties": false
           }
-        ]
-      },
-      "StringConstants": {
-        "type": "string",
-        "description": "Available eventType constants",
-        "enum": [
-          "WebsocketMessage`1",
-          "LiveAiFeedbackDto",
-          "ServerSendsErrorMessage",
-          "ClientRequestAiLiveData",
-          "RequestAirQualityData",
-          "ClientRequestDeviceHistory",
-          "ServerResponseDeviceHistory",
-          "ClientRequestDeviceStatus",
-          "ServerResponseDeviceStatus",
-          "ClientRequestDeviceStats",
-          "ServerResponseDeviceStats",
-          "ClientRequestSensorData",
-          "ServerResponseSensorData",
-          "ClientRequestDeviceList",
-          "ServerResponseDeviceList",
-          "Ping",
-          "Pong"
         ]
       },
       "WebsocketTopics": {
